[tool.poetry]
name = "app-workers"
version = "0.1.0"
description = "Worker processes"
authors = ["Deepak Duggirala <deepakduggi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
celery = "~5.2.7"        # 3.3 has broken the app
python-dotenv = "^1.0.0"
sca-rhythm = "^0.6.11"
requests = "^2.31.0"
urllib3 = "<2"           # because of ssl conflicts
glom = "^23.4.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.8"
diagrams = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
