[tool.poetry]
name = "workers"
version = "0.1.0"
description = "Worker processes"
authors = ["Deepak Duggirala <deepakduggi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
celery = "~5.2.7"        # 3.3 has broken the app
python-dotenv = "^1.0.0"
sca-rhythm = "^0.6.15"
requests = "^2.32.0"
urllib3 = "<2"           # because of ssl conflicts
glom = "^23.5.0"
python-slugify = "^8.0.1"
tzdata = "^2023.4"
fire = "^0.5.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
diagrams = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
